--- a/public/index.html
+++ b/public/index.html
@@ -83,5 +83,13 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+
+    <a title="Privacy-friendly Web Analytics" href="https://clicky.com/101381831"
+      ><img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0"
+    /></a>
+    <script async src="//static.getclicky.com/101381831.js"></script>
+    <noscript
+      ><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101381831ns.gif" /></p
+    ></noscript>
   </body>
 </html>
